--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
-    "regenerator-runtime": "^0.12.1",
+    "regenerator-runtime": "^0.13.9",
+    "sass": "^1.52.1",
+    "sass-loader": "8.0.0",
+    "uview-ui": "2.0.31",
     "vue": "^2.6.11",
     "vuex": "^3.2.0"
   },
